--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social:
     # The first element serves as the copyright owner's link
     - https://twitter.com/Fr4nkFletcher # change to your Twitter homepage
     - https://github.com/Fr4nkFletcher # change to your GitHub homepage
-    # Uncomment below to add more social links
+    - https://ko-fi.com/fr4nkfletcher # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
@@ -98,11 +98,11 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/frank.png
+avatar: https://fr4nkfletcher.github.io/assets/img/frank.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: https://fr4nkfletcher.github.io/assets/img/frank.png # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
