--- a/_config.yml
+++ b/_config.yml
@@ -214,6 +214,9 @@ exclude:
   - LICENSE
   - "*.config.js"
   - package*.json
+  - _site
+  - assets/img/favicons/browserconfig.xml
+  - assets/img/favicons/site.webmanifest  
 
 jekyll-archives:
   enabled: [categories, tags]
